--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+imx-gst1.0-plugin (4.3.4-1) beaker; urgency=medium
+
+  * Cut branch for beaker
+
+ -- AIY Projects <support-aiyprojects@google.com>  Wed, 16 Jan 2019 12:00:00 -0800
+
 imx-gst1.0-plugin (4.3.4-0) unstable; urgency=medium
 
   * Initial release
